#15441 closed bug (fixed)
regression: no /dev/net/ipro1000 for Intel I211-AT Gigabit Network
Reported by: | taos | Owned by: | waddlesplash |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta2 |
Component: | Drivers/Network/ipro1000 | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
After the update from hrev53379 (64bit) my Intel I211-AT Gigabit Network stopped working. At first (noticed after updating to hrev53523), there would be a KDL during boot (see #15402, this was fixed with hrev53552). Since the update to hrev53555, there's no longer a /dev/net/ipro1000/0 present with ifconfig
.
From the syslog for hrev53555 (attached to #15402):
KERN: pci_reserve_device(3, 0, 0, ipro1000) KERN: if_initname(0xffffffff80a74000, igb, 70) KERN: [ipro1000] ipro1000: /dev/net/ipro1000/0 KERN: DRVMEDia KERN: [ipro1000] (igb) attach_pre capping queues at 2 KERN: [ipro1000] (igb) bus_alloc_resource(3, [16], 0x0, 0xffffffffffffffff, 0x1,0x2) ... KERN: [ipro1000] (igb) Using 1024 TX descriptors and 1024 RX descriptors KERN: [ipro1000] (igb) msix_init qsets capped at 2 KERN: [ipro1000] (igb) bus_alloc_resource(3, [28], 0x0, 0xffffffffffffffff, 0x1,0x2) ... KERN: [ipro1000] (igb) queue equality override not set, capping rx_queues at 1 and tx_queues at 1 KERN: [ipro1000] (igb) Using 1 RX queues 1 TX queues ... KERN: [ipro1000] (igb) Using MSI-X interrupts with 2 vectors KERN: [ipro1000] (igb) allocated for 1 tx_queues KERN: [ipro1000] (igb) allocated for 1 rx_queues KERN: [ipro1000] (igb) MSI-X requires ifdi_rx_queue_intr_enable method ... KERN: pci_unreserve_device(3, 0, 0, ipro1000)
Syslog (first boot with older version in order to update to hrev53555, second boot with hrev53555, nothing blacklisted), output of listdev
, listimage
, listimage | grep drivers
und ifconfig
are attached to ticket #15402 - but I guess, I'll have to attach them here again.
Attachments (5)
Change History (10)
by , 16 months ago
Attachment: | syslog_hrev53555.txt added |
---|
by , 16 months ago
Attachment: | drivers_hrev53555.txt added |
---|
output of listimage | grep drivers in hrev53555
comment:1 by , 16 months ago
Owner: | changed from | to
---|---|
Status: | new → in-progress |
Appears the wrong kobj offset is passed in. Will take a look.
comment:4 by , 16 months ago
Resolution: | → fixed |
---|---|
Status: | in-progress → closed |
Thanks for being patient!
comment:5 by , 10 months ago
Milestone: | Unscheduled → R1/beta2 |
---|
Assign tickets with status=closed and resolution=fixed within the R1/beta2 development window to the R1/beta2 Milestone
syslog of hrev53555