freebsd_iflib: Fix usage of kobj_lookup_method.

Should solve #15441. We should probably enable -Werror=incompatible-ptr
globally to avoid this in the future...